.archive/kube/deploy/apps/neko/xfce/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app neko-xfce
  namespace: neko
spec:
  endpointSelector: {}
  ingress:
    # WebRTC
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "13100"
  egress:
    # WebRTC
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "13100"
